@@ -198,75 +198,6 @@ public abstract class ServiceCaller extends Object {
    throws Throwable;
 
    /**
-    * Determines the reason for a specific exception. The reason should not
-    * end with a punctuation mark like a period (<code>'.'</code>).
-    *
-    * @param exception
-    *    the exception to convert to a reason, cannot be <code>null</code>.
-    *
-    * @return
-    *    a description of the reason for the exception, never
-    *    <code>null</code>, and never an empty character string.
-    *
-    * @throws IllegalArgumentException
-    *    if <code>exception == null</code>.
-    *
-    * @since XINS 0.116
-    *
-    * @deprecated
-    *    Deprecated since XINS 0.196, with no replacement. The reason for a
-    *    caught exception is no longer logged in this class.
-    */
-   protected final String reasonFor(Throwable exception)
-   throws IllegalArgumentException {
-
-      // Check preconditions
-      MandatoryArgumentChecker.check("exception", exception);
-
-      // Determine the cause of the exception
-      exception = ExceptionUtils.getRootCause(exception);
-
-      // Allow subclass to determine reason
-      String reason = reasonForImpl(exception);
-      if (reason != null && reason.length() > 0) {
-         return reason;
-      }
-
-      String clazz   = exception.getClass().getName();
-      String message = exception.getMessage();
-      if (message != null && message.length() > 0) {
-         return clazz + ": " + message;
-      } else {
-         return clazz;
-      }
-   }
-
-   /**
-    * Determines the reason for a specific exception (implementation method).
-    *
-    * <p>Note that the reason should not end with a punctuation mark like a
-    * period (<code>'.'</code>).
-    *
-    * @param exception
-    *    the exception to convert to a reason, guaranteed not to be
-    *    <code>null</code>.
-    *
-    * @return
-    *    a description of the reason for the exception, or <code>null</code>
-    *    if the calling method ({@link #reasonFor(Throwable)}) should
-    *    determine the reason, never an empty character string.
-    *
-    * @since XINS 0.116
-    *
-    * @deprecated
-    *    Deprecated since XINS 0.196, with no replacement. The reason for a
-    *    caught exception is no longer logged in this class.
-    */
-   protected String reasonForImpl(Throwable exception) {
-      return null;
-   }
-
-   /**
     * Runs the specified thread. If the thread does not finish within the
     * total time-out period, then the thread is interrupted using the
     * {@link Thread#interrupt()} method and a {@link TimeOutException} is
